tests/snapshots/test_valid_samples__valid_samples__basic_arithmetic.snap
---
source: tests/test_valid_samples.rs
expression: output
---
; ModuleID = 'main'
source_filename = "main"

define i64 @main() {
entry:
  ret i64 11
}

